fixed notepad content-type blogapp css,html

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,7 @@
 body{
 	font-family: sans-serif;
 	font-size: 14px;
+    min-width: 110px;
 }
 
 .centered{
