--- a/static/css/content_elements/contactform.css
+++ b/static/css/content_elements/contactform.css
@@ -8,6 +8,7 @@
 	padding-top: 30px;
 }
 .sectionheader span{
+    font-weight: 900;
 	font-size: 1.4em;
 	color: #FFFFFF;
 }
