--- a/static/css/content_elements/orange_container.css
+++ b/static/css/content_elements/orange_container.css
@@ -67,7 +67,7 @@
 /* Style 2 In-line style */
 .orangecontainer2{
 	border: 3px solid #fdc600;
-	color: white;
+	color: #e3e3e3;
 	border-radius: 1px;
 	position: relative;
 	display: table;
@@ -148,4 +148,42 @@
 	right: -5px;
 	border-bottom: 20px solid #1f1f1f;
 	border-left: 20px solid rgba(1,1,1,0);
+}
+
+/* small orange box */
+.orangebox{
+    font-size: 11px;
+    position: relative;
+    overflow: hidden;
+    line-height: 20px;
+    font-weight: 900;
+    border-radius: 2px;
+}
+
+.orangebox_topfilla{
+    position: relative;
+    height: 20px;
+    background-color: #fdc600;
+    left: 20px;
+}
+
+.orangebox_corner{
+    position: relative;
+    float: left;
+    width: 0px;
+    height: 0px;
+    border-left: 20px solid rgba(0,0,0,0);
+    border-bottom: 20px solid #fdc600;
+}
+
+.orangebox_content{
+    color: #222222;
+    background-color: #fdc600;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+}
+
+.article_content_wrapper{
+    padding: 10px;
 }
